Gradle: Update RecordBuilder